--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/full-screen": "^3.12.0",
     "@react-pdf-viewer/zoom": "^3.12.0",
+    "axios": "^1.7.9",
+    "firebase": "^11.2.0",
+    "framer-motion": "^12.0.1",
+    "gitlab-calendar": "^2.0.1",
+    "motion": "^12.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.5.4",
     "react-icons": "^4.12.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.0",
@@ -36,6 +42,7 @@
     "@vite-pwa/assets-generator": "^0.2.6",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.23",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^5.0.0",
